<?php

namespace GrowthCode\DesignPatterns\Creational\CombiningPatterns\Entity;

interface EntityInterface
{
    public function getAttributes(): array;
}
